data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2432.wast
;; 3. **Test for Incorrect Operand Stack Depth**:    - Define a `block` that consumes more operands than available on the stack prior to the block. This checks if the implementation correctly manages stack height requirements.    - Constraint: Operand stack behavior.    - CFG Impact: Inconsistent CFG due to stack underflow, causing execution paths to misalign.

(assert_invalid
  (module (func $incorrect-stack-depth
    (i32.const 1) (block (result i32 i32) (br 0))
  ))
  "type mismatch"
)